# sleepless-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
doc/: ANALYSIS.md
docs/: index.md  quickstart.md
src/sleepless_agent/: __init__.py  __main__.py  cli.py  config.py
src/sleepless_agent/core/: __init__.py  daemon.py  executor.py  state.py
src/sleepless_agent/deployment/: com.sleepless-agent.plist  sleepless-agent.service
src/sleepless_agent/reporters/: __init__.py  base.py  zulip_reporter.py
